--- a/disney-shop/package.json
+++ b/disney-shop/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.5.1",
-    "pinia": "^2.1.7"
+    "mosha-vue-toastify": "^1.0.23",
+    "pinia": "^2.1.7",
+    "vue-toast-notification": "^3.1.2"
   }
 }
